@@ -7,6 +7,7 @@
   ** Add `/password` route to change your user password.
   ** Route `/desk/list` checks the `view_space` permission now.
   ** Respond with HTTP 409 at `/register` when the username is already taken.
+  ** Restrict password characters.
 
 == `0.6.3.3`
 
